--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Page not fou... wha?</title>
+<title>404 page found</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 <img src="errormonkey.gif">
 </td>
 <td>&nbsp;&nbsp;&nbsp;</td>
-<td><h1><font color="#2D78A6">You've been 404'd!!!</font></h1></td>
+<td><h1><font color="#2D78A6">You've found the 404 page.</font></h1></td>
 </tr>
 </table>
 <p />
